[package]
name = "sie4"
version = "0.1.0"
edition = "2021"

[dependencies]
codepage-437 = "0.1.0"
iso_currency = "0.4.3"
memchr = "2.5.0"
nom = "7.1"
nom_locate = "4.1.0"
paste = "1.0"
rust_decimal = { version = "1.29", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.44"
time = { version = "0.3", features = ["parsing", "macros"] }

[dev-dependencies]
rust_decimal_macros = "1.29"
