[package]
name = "sie4"
version = "0.1.1"
edition = "2021"
authors = ["akeamc"]
description = "SIE4 parser"
repository = "https://github.com/akeamc/sie4"
license = "MIT"
keywords = ["sie4", "nom", "parser"]
categories = ["parser-implementations"]

[workspace]
members = [".", "sie4-cli"]

[workspace.dependencies]
sie4 = { path = "." }

[dependencies]
codepage-437 = "0.1"
iso_currency = "0.4"
memchr = "2.5"
nom = "7.1"
nom-bufreader = { version = "0.2", default-features = false }
nom_locate = "4.1"
paste = "1.0"
rust_decimal = { version = "1.29", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
time = { version = "0.3", features = ["parsing", "macros"] }

[dev-dependencies]
rust_decimal_macros = "1.29"
